--- a/style.css
+++ b/style.css
@@ -1,1 +1,23 @@
-code to be added
+.name {
+  text-align: center;
+  margin-bottom: 1px;
+}
+
+.contact-info {
+  text-align: center;
+  margin-top: 1px;
+}
+
+.picture {
+  height: 250px;
+  border-radius: 50%;
+}
+
+.experience-header {
+
+}
+
+.experience-body {
+
+}
+
