--- a/style.css
+++ b/style.css
@@ -1,16 +1,27 @@
 .name {
   text-align: center;
   margin-bottom: 1px;
+  border: 1px solid black;
 }
 
 .contact-info {
   text-align: center;
-  margin-top: 1px;
+  border: 1px solid black;
+  margin-top: 0px;
+}
+
+.about-me {
+  border: 1px solid black;
+  padding: 5px solid red;
 }
 
 .picture {
   height: 250px;
   border-radius: 50%;
+}
+
+p {
+  float: right;
 }
 
 .experience-header {
