--- a/style.css
+++ b/style.css
@@ -11,20 +11,22 @@
 }
 
 .about-me {
-  border: 1px solid black;
-  padding: 5px solid red;
+  border: 30px solid #3bd4d4;
   width: 50%;
   margin: auto;
+  background-color: #3bd4d4;
+  border-radius: 10%;
+  display: flex;
 }
 
 .picture {
   height: 250px;
   border-radius: 50%;
+  margin-right: 30px;
 }
 
 p {
-  float: right;
-  text-align: center;
+  flex-direction: right;
 }
 
 .links {
