--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
+.body-card {
+  background-color: #e0e0e0;
+  width: 80%;
+  display: center;
+}
 .name {
   text-align: center;
   margin-bottom: 1px;
-  border: 1px solid black;
+  border-bottom: 2px solid white;
 }
 
 .contact-info {
   text-align: center;
-  border: 1px solid black;
+  border-top: 2px solid white;
   margin-top: 0px;
 }
 
 .about-me {
-  border: 30px solid #3bd4d4;
+  border: 40px solid #3bd4d4;
   width: 50%;
   margin: auto;
   background-color: #3bd4d4;
@@ -40,6 +45,13 @@ p {
 
 .github-link {
   padding: 10px;
+}
+.experience-header {
+  border-bottom: 2px solid white;
+  margin-bottom: 2px;
+}
+.experience-body {
+  border-top: 2px solid white;
 }
 
 
