--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
+body{
+  margin: 50px;
+}
 .body-card {
   background-color: #e0e0e0;
-  width: 80%;
   display: center;
+  width: 70%;
+  margin: auto;
+  border-radius: 5%
 }
 .name {
   text-align: center;
-  margin-bottom: 1px;
+  margin-bottom: 3px;
   border-bottom: 2px solid white;
+  padding-top: 10px;
 }
 
 .contact-info {
@@ -22,16 +28,19 @@
   background-color: #3bd4d4;
   border-radius: 10%;
   display: flex;
+  border-top: 20px;
 }
 
 .picture {
   height: 250px;
   border-radius: 50%;
   margin-right: 30px;
+  margin-top: 50px;
 }
 
 p {
   flex-direction: right;
+  margin-top: 40px;
 }
 
 .links {
@@ -49,9 +58,49 @@ p {
 .experience-header {
   border-bottom: 2px solid white;
   margin-bottom: 2px;
+  padding-left: 30px;
 }
 .experience-body {
   border-top: 2px solid white;
+  padding-left: 50px;
+  padding-right: 50px;
+  border-bottom: 2px solid white;
+  margin-bottom: 3px;
+  padding-bottom: 10px;
 }
 
+.certification-header{
+  border-top: 2px solid white;
+  padding-left: 30px;
+}
 
+.certification-body {
+  padding-left: 50px;
+  border-bottom: 2px solid white;
+  margin-bottom: 3px;
+}
+.education-header {
+  border-top: 2px solid white;
+  padding-left: 30px;
+}
+.education-body {
+  padding-left: 50px;
+  border-bottom: 2px solid white;
+  margin-bottom: 3px;
+}
+.skills-header {
+  border-top: 2px solid white;
+  padding-left: 30px;
+}
+.skills-body {
+  padding-left: 50px;
+  border-bottom: 2px solid white;
+  margin-bottom: 3px;
+  padding-bottom: 10px;
+  padding-right: 50px;
+}
+.references {
+  border-top: 2px solid white;
+  text-align: center;
+  padding-bottom: 5px;
+}
