--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
   margin: 50px;
+  background-image: url("https://raw.githubusercontent.com/Hopper2021/hopper2021.github.io/main/what-the-hex.png");
 }
 .body-card {
   background-color: #e0e0e0;
