--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
   background-color: #3bd4d4;
   border-radius: 10%;
   display: flex;
+  flex-wrap: wrap;
   border-top: 20px;
 }
 
@@ -36,12 +37,15 @@ body{
   height: 250px;
   border-radius: 50%;
   margin-right: 30px;
-  margin-top: 50px;
+  margin-top: 60px;
+  
 }
 
 p {
-  flex-direction: right;
   margin-top: 40px;
+  width: 200px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .links {
@@ -77,6 +81,8 @@ p {
 
 .certification-body {
   padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 10px;
   border-bottom: 2px solid white;
   margin-bottom: 3px;
 }
@@ -86,6 +92,8 @@ p {
 }
 .education-body {
   padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 10px;
   border-bottom: 2px solid white;
   margin-bottom: 3px;
 }
